css/main.css
/*
IntVentures Main Stylesheet
Developed November 2017
*/

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    overflow-x: hidden;
    max-width: 100vw;
    position: relative;
    -webkit-overflow-scrolling: touch;
}

body {
    color: #112E47;
    font-family: 'Roboto Mono', monospace;
    overflow-x: hidden;
    max-width: 100vw;
    position: relative;
    -webkit-overflow-scrolling: touch;
}

h1 {
    -webkit-font-smoothing: antialiased;
    font-family: 'Untitled Sans', serif;
    font-size: 32px;
    line-height: 47px;
    font-weight: 200;
    padding: 50px 0 45px 0;
    color: #112E47;
}

p {
    font-size: 14px;
    line-height: 23px;
    margin: 20px auto 0 auto;
    max-width: 450px;
}

header {
    font-family: 'Untitled Sans', serif;
    font-size: 18px;
    max-width: 1000px;
    margin: 0 auto;
    padding: 30px 15px;
}

header .logo {
    width: 150px;
}

header div {
    justify-content: center;
}

header a {
    color: #112E47;
    font-weight: 200;
    margin: 0 20px;
    padding: 8px 12px;
    font-size: 14px;
    text-decoration: none;
    white-space: nowrap;
}

header a:first-child {
    padding: 0;
}

a {
    transition: 0.5s;
}

a:hover {
    opacity: 0.5;
    transition: 0.5s;
}

.inner-container {
    margin: 0 auto;
    padding: 0 20px;
    max-width: 1000px;
    overflow-x: hidden;
}

.hero-heading {
    margin: 0 auto;
    width: 100%;
    max-width: 760px;
    text-align: center;
    padding-top: 75px;
}

.hero-illustration {
    display: none;
    width: 600px;
    position: absolute;
    right: -200px;
    top: 200px;
}

.synergy-ball {
    display: none;
    position: absolute;
    right: 60px;
    top: 410px;
    width: 204px;
    z-index: -1;
}

.hero-paragraph {
    text-align: center;
    margin: 50px auto 0;
    max-width: 570px;
}

.button {
    border: #112E47 solid 2px;
    border-radius: 2px;
    padding: 8px 16px;
}

.contact-button {
    -webkit-font-smoothing: antialiased;
    font-weight: 200;
    background-color: #112E47;
    display: block;
    margin: 0 auto;
    width: 100%;
    text-align: center;
    font-size: 20px;
    padding: 20px 0;
    color: #FFF;
    position: relative;
    z-index: 99;
}

a.contact-button {
    text-decoration: none;
    font-family: 'Untitled Sans', sans-serif;
}

.testimonials .row {
    justify-content: center;
    flex-direction: column;
}

.testimonials span:first-of-type {
    font-family: 'Untitled Sans', sans-serif;
    padding-bottom: 4px;
}

.testimonials a {
    border-bottom: 1px #92FF50 solid;
    text-decoration: none;
    font-size: 14px;
    font-weight: 600;
    color: #112E47;
    white-space: nowrap;
}

/* Flex */
.flex {
    display: flex;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
}

._space-between {
    justify-content: space-between;
}

._direction-column {
    flex-direction: column;
}

._justify-content-center {
    justify-content: center;
}

._alignitems-center {
    align-items: center;
}

._alignself-flex-start {
    align-self: flex-start;
}

._alignself-flex-end {
    align-self: flex-end;
}

.testimonials {
    margin: 70px auto 0;
}

.testimonial img {
    height: 48px;
    padding-right: 20px;
    display: flex;
}

.testimonial img.user-camp {
    height: 37px;
}

.testimonial div:first-of-type {
    width: 90px;
}

.testimonial:last-of-type {
    margin-top: 70px;
}

.testimonials:last-child {
    margin-left: 70px;
}

.testimonials .row:last-child {
    margin-top: 70px;
}

.comet-01 {
    position: relative;
    bottom: 10px;
    left: 30px;
}

.howitworks-illustration {
    position: absolute;
    left: -150px;
    top: 1310px;
}

.howitworks-text {
    margin-top: -90px;
}

.howitworks-text span,
.company span {
    font-family: 'HK Grotesk', sans-serif;
    font-size: 14px;
}

.howitworks-text span:first-child {
    color: #ACFF70;
}

.step {
    margin-top: 110px;
}

.step p {
    border-top: 1px solid #92FF50;
    padding: 12px 0;
    margin-top: 13px;
}

h1.our-company  {
    margin-top: 25px;
    padding: 80px 30px 0 0;
}

.company {
    margin-top: 80px;
}

.company-asset {
    margin: 0 auto;
}

._listen {
    flex-direction: column;
}

.title span {
    font-family:'Untitled Sans';
    padding-bottom: 4px;
}

.title {
    position: relative;
    top: -180px;
    left: 230px;
}

.title p {
    margin: 3px 0 0 0;
}

.deals-done {
    position: relative;
    right: -100px;
}

.we-listen {
    margin: 70px auto 0 auto;
}

.contact h1 {
    max-width: 820px;
}

footer {
    margin: 130px auto 50px auto;
    display: block;
    height: 300px;
}

footer .logo {
    margin: 0 auto;
    display: block;
}

footer p {
    text-align: center;
    max-width: none;
}

.footer-illustration {
    position: absolute;
    left: -30px;
    bottom: 0;
}

/* Mobile only */
.mobile-hero-01 {
    position: relative;
    left: 30px;
    top: 60px;
}

.mobile-hero-02 {
    position: relative;
    right: 30px;
    bottom: 30px;
}


.hide-750 {
    display: none;
}
.hide-850 {
    display: none;
}

/* Media Queries */
@media (min-width:450px) {
    h1 {
        font-size: 40px;
        line-height: 57px;
        text-align: center;
    }
    header a {
        font-size: 16px;
    }
    .step {
        text-align: center;
    }
}
@media (min-width: 750px) {
    .mobile-only {
        display: none;
    }

    .hide-750 {
        display: inline;
    }
    header {
        flex-direction: unset;
        padding: 40px 20px;
    }
    h1 {
        font-size: 55px;
        line-height: 80px;
        text-align: inherit;
        padding: 120px 0 85px 0;
    }
    h1.our-company {
        text-align: right;
        margin-bottom: 100px;
        margin-top: 80px;
        padding: 80px 30px 0 0;
    }
    .hero-paragraph:first-of-type {
        margin-top: 0px;
    }
    p {
        margin: 22px 0 0 0;
        font-size: 15px;
        line-height: 25px;
    }
    .inner-container {
        padding: 0 42px;
    }
    .testimonials .row {
        justify-content: start;
        flex-direction: unset;
    }
    .testimonial {
        justify-content: base;
        padding-right: 95px;
    }
    .testimonials .row:last-child {
        margin-top: 10px;
        margin-left: 150px;
    }
    .testimonial img {
        height: 55px;
    }
    .testimonial img.user-camp {
        height: 50px;
    }
    .testimonial {
        justify-content: center;
    }
    .testimonial div:first-of-type {
        width: 80px;
    }
    .user-camp-text {
        margin-left: 15px;
    }
    .howitworks-illustration {
        top: 1200px;
    }
    .howitworks-text {
        padding-left: 260px;
    }
    .howitworks-text .in {
        padding-left: 130px;
    }
    .howitworks-text span:first-child {
        padding-right: 30px;
        font-size: 16px;
    }
    .howitworks-text p {
        padding-left: 60px;
        max-width: 450px;
    }
    .company span {
        font-size: 16px;
    }
    .step {
        text-align: inherit;
        margin-top: 110px;
    }
    .step p {
        border-top: none;
    }
    .company-asset {
        width: 50%;
        margin: 0;
    }
    ._listen {
        flex-direction: unset;
    }
    .we-listen {
        margin: 0;
        position: relative;
        top: -20px;
        right: -40px;
    }
    .contact-button {
        font-size: 27px;
        padding: 30px 0;
    }
}
@media (min-width: 850px) {
    .hide-850 {
        display: inline;
    }
    footer {
        margin: 200px 0;
    }
    footer p {
        text-align: right;
    }
    footer .logo {
        float: right;
    }
}
@media (min-width: 1030px) {
    .inner-container {
        padding: 0 12px;
    }
    h1 {
        font-size: 65px;
    }
    .hero-heading {
        margin: 0;
        max-width: 750px;
        text-align: left;
    }
    .hero-illustration {
        display: block;
        width: 641px;
        right: -200px;
    }
    .hero-paragraph {
        margin: 50px 0 0;
        text-align: left;
        max-width: 450px;
    }
    .synergy-ball {
        display: block;
    }
    .testimonials {
        margin: 50px 0;
    }
    .howitworks-illustration {
        left: -10px;
        top: 1250px;
    }
    .howitworks-text {
        padding-left: 300px;
    }
}

@media (min-width: 1350px) {
    .hero-illustration {
        right: -100px;
    }
    .synergy-ball {
        right: 160px;
    }
}

